# Centauri

./: .gitignore  CMakeLists.txt  build.bat
rc/: resources.rc
src/: CMakeLists.txt  centauri.cpp  jsbinding.cpp  net.cpp  util.cpp
src/Renderer/: renderer.cpp
src/UI/: input-box.cpp  ui-element.cpp  ui.cpp
src/cmake_modules/: FindCryptoPP.cmake  FindGLFW.cmake  FindSFML.cmake
src/include/: Task.h  centauri.h  configure.h.cmake  jsbinding.h  net.h  util.h
src/include/Renderer/: renderer.h
src/include/UI/: font-container.h  input-box.h  ui-element.h  ui.h
src/res/: resources.conf  ui.js
